add_library(asserv pid.c pidll.c)
target_link_libraries(asserv pico_stdlib hardware_pwm)
target_include_directories(asserv PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(test main.c)
target_link_libraries(test asserv pico_stdlib)
pico_enable_stdio_usb(test 1)
pico_enable_stdio_uart(test 0)
pico_add_extra_outputs(test)
