
add_library(asserv pid.c pidll.c)
target_link_libraries(asserv pico_stdlib hardware_pwm com)
add_subdirectory(header)
add_executable(bleu  main.c)
add_executable(vert main1.c)
target_link_libraries(bleu asserv pico_stdlib)
target_link_libraries(vert asserv pico_stdlib)
pico_enable_stdio_usb(vert 1)
pico_enable_stdio_uart(vert 0)
pico_enable_stdio_usb(bleu 1)
pico_enable_stdio_uart(bleu 0)
pico_add_extra_outputs(bleu)
pico_add_extra_outputs(vert)
